--- a/style.css
+++ b/style.css
@@ -27,9 +27,13 @@ header h1 {
 header .shopping{
     position: relative;
     text-align: right;
+    cursor: pointer;
 }
 header .shopping img{
     width: 40px;
+    height: 40px;
+    margin-left: 10px;
+    cursor: pointer;
 }
 header .shopping span{
     background: green;
@@ -48,7 +52,7 @@ header .shopping span{
     grid-template-columns: repeat(3, 1fr);
     column-gap: 20px;
     row-gap: 20px;
-    margin-top: 50px;
+    margin-top: 30px;
 }
 .list .item{
     text-align: center;
