--- a/style.css
+++ b/style.css
@@ -94,14 +94,19 @@ header .shopping span{
 .cart{
     position: fixed;
     top:0;
+    right: 0;
     left: 100%;
     width: 500px;
     background-color: #453E3B;
     height: 100vh;
     transition: 0.5s;
+    z-index: 1;
+    box-shadow: -5px 0 15px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
 }
 .active .cart{
-    left: calc(100% - 500px);
+    /*left: calc(100% - 500px);*/
+    transform: translateX(-100%);
 }
 .active .container{
    transform: translateX(-200px);
@@ -141,6 +146,7 @@ header .shopping span{
     grid-template-columns: 100px repeat(3, 1fr);
     color: #fff;
     row-gap: 10px;
+    align-items: center;
 }
 .listCart li div{
     display: flex;
@@ -148,7 +154,11 @@ header .shopping span{
     align-items: center;
 }
 .listCart li img{
-    width: 90%;
+    width: 80%;
+    height: 80px;
+    border-radius: 5px;
+    object-fit: cover;
+    margin-right: 10px;
 }
 .listCart li button{
     background-color: #fff5;
